--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <p>Shiny, glowy and make great sounds.</p>
         <ul>
           <li>
-            <a class="btn" href="#" aria-label="Add Crystal to cart">
+            <a class="content" href="#" aria-label="Add Crystal to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="#" class="">
               <img src="images/favourite.svg" alt="" aria-label="Favourite Crystal">
             </a>
           </li>
@@ -43,7 +43,7 @@
         <p>Diamonds sparkle in all shapes, sizes & clarities.</p>
         <ul>
           <li>
-            <a class="btn" href="#" aria-label="Add Diamond to cart">
+            <a class="content" href="#" aria-label="Add Diamond to cart">
               <img src="images/cart.svg" alt="car" role="presentation">
               <span>Add to cart</span>
             </a>
@@ -69,7 +69,7 @@
         <p>Lots of bright, wonderful colours—and shapes.</p>
         <ul>
           <li>
-            <a class="btn" href="#" aria-label="Add Gem to cart">
+            <a class="content" href="#" aria-label="Add Gem to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
@@ -95,7 +95,7 @@
         <p>The root word of jewellery, so ya know it’s gorg’</p>
         <ul>
           <li>
-            <a class="btn" href="#" aria-label="Add Jewel to cart">
+            <a class="content" href="#" aria-label="Add Jewel to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
@@ -121,7 +121,7 @@
         <p>Beautifly pearlescent circles created inside living creatures.</p>
         <ul>
           <li>
-            <a class="btn" href="#" aria-label="Add Pearl to cart">
+            <a class="content" href="#" aria-label="Add Pearl to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
@@ -147,7 +147,7 @@
         <p>Who doesn’t love a good, plain, ol’ rock now & then.</p>
         <ul>
           <li>
-            <a class="btn" href="#" aria-label="Add Rock to cart">
+            <a class="content" href="#" aria-label="Add Rock to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
@@ -173,7 +173,7 @@
         <p>If you love dazzling red—this is the one!</p>
         <ul>
           <li>
-            <a class="btn" href="#" aria-label="Add Ruby to cart">
+            <a class="content" href="#" aria-label="Add Ruby to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
@@ -199,7 +199,7 @@
         <p>Blue for you. Blue is blue. Yay, blue.</p>
         <ul>
           <li>
-            <a class="btn" href="#" aria-label="Add Sapphire to cart">
+            <a class="content" href="#" aria-label="Add Sapphire to cart">
               <img src="images/cart.svg" alt="cart" role="presentation">
               <span>Add to cart</span>
             </a>
