--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         <p>Shiny, glowy and make great sounds.</p>
         <ul>
           <li>
-            <a class="content" href="#" aria-label="Add Crystal to cart">
+            <a class="content" href="https://crystal.cart.com" aria-label="Add Crystal to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
           </li>
 
           <li>
-            <a href="#" class="">
+            <a href="https://crystal.favourite">
               <img src="images/favourite.svg" alt="" aria-label="Favourite Crystal">
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://rystal.share.com">
               <img src="images/share.svg" alt="" aria-label="Share Crystal">
             </a>
           </li>
@@ -43,20 +43,20 @@
         <p>Diamonds sparkle in all shapes, sizes & clarities.</p>
         <ul>
           <li>
-            <a class="content" href="#" aria-label="Add Diamond to cart">
+            <a class="content" href="https://diamond.cart.com" aria-label="Add Diamond to cart">
               <img src="images/cart.svg" alt="car" role="presentation">
               <span>Add to cart</span>
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://Diamond.favourite.com">
               <img src="images/favourite.svg" alt="favourite" aria-label="Favourite Diamond">
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://diamond.share.com">
               <img src="images/share.svg" alt="share" aria-label="Share Diamond">
             </a>
           </li>
@@ -69,20 +69,20 @@
         <p>Lots of bright, wonderful colours—and shapes.</p>
         <ul>
           <li>
-            <a class="content" href="#" aria-label="Add Gem to cart">
+            <a class="content" href="https://gem.cart.com" aria-label="Add Gem to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://Gem.favourite.com">
               <img src="images/favourite.svg" alt="favourite" aria-label="Favourite Gem">
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://Gem.share.com">
               <img src="images/share.svg" alt="share" aria-label="Share Gem">
             </a>
           </li>
@@ -95,20 +95,20 @@
         <p>The root word of jewellery, so ya know it’s gorg’</p>
         <ul>
           <li>
-            <a class="content" href="#" aria-label="Add Jewel to cart">
+            <a class="content" href="https://jewel.cart.com" aria-label="Add Jewel to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://Jewel.favourite.com">
               <img src="images/favourite.svg" alt="" aria-label="Favourite Jewel">
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://jewel.share.com">
               <img src="images/share.svg" alt="" aria-label="Share Jewel">
             </a>
           </li>
@@ -121,20 +121,20 @@
         <p>Beautifly pearlescent circles created inside living creatures.</p>
         <ul>
           <li>
-            <a class="content" href="#" aria-label="Add Pearl to cart">
+            <a class="content" href="https://pearl.cart.com" aria-label="Add Pearl to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://pearl.favourite.com">
               <img src="images/favourite.svg" alt="" aria-label="Favourite Pearl">
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://pearl.share.com">
               <img src="images/share.svg" alt="" aria-label="Share Pearl">
             </a>
           </li>
@@ -147,20 +147,20 @@
         <p>Who doesn’t love a good, plain, ol’ rock now & then.</p>
         <ul>
           <li>
-            <a class="content" href="#" aria-label="Add Rock to cart">
+            <a class="content" href="https://rock.cart.com" aria-label="Add Rock to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://rock.favourite.com">
               <img src="images/favourite.svg" alt="" aria-label="Favourite Rock">
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://rock.share.com">
               <img src="images/share.svg" alt="" aria-label="Share Rock">
             </a>
           </li>
@@ -173,20 +173,20 @@
         <p>If you love dazzling red—this is the one!</p>
         <ul>
           <li>
-            <a class="content" href="#" aria-label="Add Ruby to cart">
+            <a class="content" href="https://ruby.cart.com" aria-label="Add Ruby to cart">
               <img src="images/cart.svg" alt="" role="presentation">
               <span>Add to cart</span>
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://ruby.favourite.com">
               <img src="images/favourite.svg" alt="" aria-label="Favourite Ruby">
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://ruby.share.com">
               <img src="images/share.svg" alt="" aria-label="Share Ruby">
             </a>
           </li>
@@ -199,20 +199,20 @@
         <p>Blue for you. Blue is blue. Yay, blue.</p>
         <ul>
           <li>
-            <a class="content" href="#" aria-label="Add Sapphire to cart">
+            <a class="content" href="https://sapphire.cart.com" aria-label="add sapphire to cart">
               <img src="images/cart.svg" alt="cart" role="presentation">
               <span>Add to cart</span>
             </a>
           </li>
 
           <li>
-            <a href="#">
-              <img src="images/favourite.svg" alt="" aria-label="Favourite Sapphire">
+            <a href="https://apphire.favourite.com">
+              <img src="images/favourite.svg" alt="" aria-label="favourite Sapphire">
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="https://apphire.share.com">
               <img src="images/share.svg" alt="" aria-label="Share Sapphire">
             </a>
           </li>
