Upgrade and fix

--- a/index.html
+++ b/index.html
@@ -2,224 +2,105 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Pretty Products</title>
+  <title>pretty products</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Karma:400,600|Oswald:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Karma&family=Oswald:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <main>
+
     <ol>
       <li>
+        <img class="content" src="images/crystal.svg" alt="Shiny, glowy and make great sounds.">
         <h2>Crystal</h2>
-        <img src="images/crystal.svg" alt="crystal">
         <p>Shiny, glowy and make great sounds.</p>
-        <ul>
-          <li>
-            <a class="content" href="https://crystal.cart.com" aria-label="Add Crystal to cart">
-              <img src="images/cart.svg" alt="" role="presentation">
-              <span>Add to cart</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://crystal.favourite">
-              <img src="images/favourite.svg" alt="" aria-label="Favourite Crystal">
-            </a>
-          </li>
-
-          <li>
-            <a href="https://rystal.share.com">
-              <img src="images/share.svg" alt="" aria-label="Share Crystal">
-            </a>
-          </li>
-        </ul>
+        <span>
+        <button class="cart" type="button"> <img class="beep" src="images/cart.svg" alt="Add to cart">Add to cart</button>
+        <button class="fav" type="button"> <img src="images/favourite.svg" alt="Favourite"></button>
+        <button class="share" type="button"> <img src="images/share.svg" alt="Share"></button>
+        </span>
       </li>
 
       <li>
+        <img class="content" src="images/diamond.svg" alt="Diamonds sparkle in all shapes, sizes & clarities.">
         <h2>Diamond</h2>
-        <img src="images/diamond.svg" alt="diamond">
         <p>Diamonds sparkle in all shapes, sizes & clarities.</p>
-        <ul>
-          <li>
-            <a class="content" href="https://diamond.cart.com" aria-label="Add Diamond to cart">
-              <img src="images/cart.svg" alt="car" role="presentation">
-              <span>Add to cart</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://Diamond.favourite.com">
-              <img src="images/favourite.svg" alt="favourite" aria-label="Favourite Diamond">
-            </a>
-          </li>
-
-          <li>
-            <a href="https://diamond.share.com">
-              <img src="images/share.svg" alt="share" aria-label="Share Diamond">
-            </a>
-          </li>
-        </ul>
+        <span>
+        <button class="cart" type="button"> <img class="beep" src="images/cart.svg" alt="Add to cart">Add to cart</button>
+        <button class="fav" type="button"> <img src="images/favourite.svg" alt="Favourite"></button>
+        <button class="share" type="button"> <img src="images/share.svg" alt="Share"></button>
+        </span>
       </li>
 
       <li>
+        <img class="content" src="images/gem.svg" alt="Lots of bright, wonderful colours—and shapes.">
         <h2>Gem</h2>
-        <img src="images/gem.svg" alt="gem">
         <p>Lots of bright, wonderful colours—and shapes.</p>
-        <ul>
-          <li>
-            <a class="content" href="https://gem.cart.com" aria-label="Add Gem to cart">
-              <img src="images/cart.svg" alt="" role="presentation">
-              <span>Add to cart</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://Gem.favourite.com">
-              <img src="images/favourite.svg" alt="favourite" aria-label="Favourite Gem">
-            </a>
-          </li>
-
-          <li>
-            <a href="https://Gem.share.com">
-              <img src="images/share.svg" alt="share" aria-label="Share Gem">
-            </a>
-          </li>
-        </ul>
+        <span>
+        <button class="cart" type="button"> <img class="beep" src="images/cart.svg" alt="Add to cart">Add to cart</button>
+        <button class="fav" type="button"> <img src="images/favourite.svg" alt="Favourite"></button>
+        <button class="share" type="button"> <img src="images/share.svg" alt="Share"></button>
+        </span>
       </li>
 
       <li>
+        <img class="content" src="images/jewel.svg" alt="The root word of jewellery, so ya know it’s gorg’">
         <h2>Jewel</h2>
-        <img src="images/jewel.svg" alt="jewel">
         <p>The root word of jewellery, so ya know it’s gorg’</p>
-        <ul>
-          <li>
-            <a class="content" href="https://jewel.cart.com" aria-label="Add Jewel to cart">
-              <img src="images/cart.svg" alt="" role="presentation">
-              <span>Add to cart</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://Jewel.favourite.com">
-              <img src="images/favourite.svg" alt="" aria-label="Favourite Jewel">
-            </a>
-          </li>
-
-          <li>
-            <a href="https://jewel.share.com">
-              <img src="images/share.svg" alt="" aria-label="Share Jewel">
-            </a>
-          </li>
-        </ul>
+        <span>
+        <button class="cart" type="button"> <img class="beep" src="images/cart.svg" alt="Add to cart">Add to cart</button>
+        <button class="fav" type="button"> <img src="images/favourite.svg" alt="Favourite"></button>
+        <button class="share" type="button"> <img src="images/share.svg" alt="Share"></button>
+        </span>
       </li>
 
       <li>
+        <img class="content" src="images/pearl.svg" alt="Beautifly pearlescent circles created inside living creatures.">
         <h2>Pearl</h2>
-        <img src="images/pearl.svg" alt="">
         <p>Beautifly pearlescent circles created inside living creatures.</p>
-        <ul>
-          <li>
-            <a class="content" href="https://pearl.cart.com" aria-label="Add Pearl to cart">
-              <img src="images/cart.svg" alt="" role="presentation">
-              <span>Add to cart</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://pearl.favourite.com">
-              <img src="images/favourite.svg" alt="" aria-label="Favourite Pearl">
-            </a>
-          </li>
-
-          <li>
-            <a href="https://pearl.share.com">
-              <img src="images/share.svg" alt="" aria-label="Share Pearl">
-            </a>
-          </li>
-        </ul>
+        <span>
+        <button class="cart" type="button"> <img class="beep" src="images/cart.svg" alt="Add to cart">Add to cart</button>
+        <button class="fav" type="button"> <img src="images/favourite.svg" alt="Favourite"></button>
+        <button class="share" type="button"> <img src="images/share.svg" alt="Share"></button>
+        </span>
       </li>
 
       <li>
+        <img class="content" src="images/rock.svg" alt="Who doesn’t love a good, plain, ol’ rock now & then.">
         <h2>Rock</h2>
-        <img src="images/rock.svg" alt="">
         <p>Who doesn’t love a good, plain, ol’ rock now & then.</p>
-        <ul>
-          <li>
-            <a class="content" href="https://rock.cart.com" aria-label="Add Rock to cart">
-              <img src="images/cart.svg" alt="" role="presentation">
-              <span>Add to cart</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://rock.favourite.com">
-              <img src="images/favourite.svg" alt="" aria-label="Favourite Rock">
-            </a>
-          </li>
-
-          <li>
-            <a href="https://rock.share.com">
-              <img src="images/share.svg" alt="" aria-label="Share Rock">
-            </a>
-          </li>
-        </ul>
+        <span>
+        <button class="cart" type="button"> <img class="beep" src="images/cart.svg" alt="Add to cart">Add to cart</button>
+        <button class="fav" type="button"> <img src="images/favourite.svg" alt="Favourite"></button>
+        <button class="share" type="button"> <img src="images/share.svg" alt="Share"></button>
+        </span>
       </li>
 
       <li>
+        <img class="content" src="images/ruby.svg" alt="If you love dazzling red—this is the one!">
         <h2>Ruby</h2>
-        <img src="images/ruby.svg" alt="">
         <p>If you love dazzling red—this is the one!</p>
-        <ul>
-          <li>
-            <a class="content" href="https://ruby.cart.com" aria-label="Add Ruby to cart">
-              <img src="images/cart.svg" alt="" role="presentation">
-              <span>Add to cart</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://ruby.favourite.com">
-              <img src="images/favourite.svg" alt="" aria-label="Favourite Ruby">
-            </a>
-          </li>
-
-          <li>
-            <a href="https://ruby.share.com">
-              <img src="images/share.svg" alt="" aria-label="Share Ruby">
-            </a>
-          </li>
-        </ul>
+        <span>
+        <button class="cart" type="button"> <img class="beep" src="images/cart.svg" alt="Add to cart">Add to cart</button>
+        <button class="fav" type="button"> <img src="images/favourite.svg" alt="Favourite"></button>
+        <button class="share" type="button"> <img src="images/share.svg" alt="Share"></button>
+        </span>
       </li>
 
       <li>
+        <img class="content" src="images/sapphire.svg" alt="Blue for you. Blue is blue. Yay, blue.">
         <h2>Sapphire</h2>
-        <img src="images/sapphire.svg" alt="">
         <p>Blue for you. Blue is blue. Yay, blue.</p>
-        <ul>
-          <li>
-            <a class="content" href="https://sapphire.cart.com" aria-label="add sapphire to cart">
-              <img src="images/cart.svg" alt="cart" role="presentation">
-              <span>Add to cart</span>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://apphire.favourite.com">
-              <img src="images/favourite.svg" alt="" aria-label="favourite Sapphire">
-            </a>
-          </li>
-
-          <li>
-            <a href="https://apphire.share.com">
-              <img src="images/share.svg" alt="" aria-label="Share Sapphire">
-            </a>
-          </li>
-        </ul>
+        <span>
+        <button class="cart" type="button"> <img class="beep" src="images/cart.svg" alt="Add to cart">Add to cart</button>
+        <button class="fav" type="button"> <img src="images/favourite.svg" alt="Favourite"></button>
+        <button class="share" type="button"> <img src="images/share.svg" alt="Share"></button>
+        </span>
       </li>
-
     </ol>
   </main>
+
 </body>
 </html>
